monitoring/ch-monitor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: clickhouse.dev.en-gage.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clickhouse-monitoring-release
                port:
                  number: 3000
